# climatrix

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README-pypi.md  README.md  debug_threshold.py  dev_install.sh  latest  mkdocs.yml  pyproject.toml  t1.py  test_edge_cases.py  test_realistic_scenario.py  test_sparse_comparison.py  test_sparse_comprehensive.py  versions.json
artifacts/: siren.ckpt.bkp
data/: era5-land.nc.def
docs/: api.md  cli.md  getting_started.md  index.md  num_params_property.md  plotting.md  reference.md  tutorial.md
examples/: hyperparameter_optimization.py  interactive_plotting_demo.py  introduction.ipynb  lat_lon.ipynb  num_params_demo.py  reconstruction.ipynb  sampling.ipynb  siren_checkpoint.pt
resources/: logging.ini
v0.5a0/: 404.html  index.html  sitemap.xml
v0.5a1/: 404.html  index.html  objects.inv  sitemap.xml
v1.0a10/: 404.html  index.html  sitemap.xml
v1.0a11/: 404.html  index.html  objects.inv  sitemap.xml
v1.0a12/: 404.html  index.html  sitemap.xml
v1.0a13/: 404.html  index.html  sitemap.xml
v1.0a14/: 404.html  index.html  sitemap.xml
v1.0a15/: 404.html  index.html  objects.inv  sitemap.xml
v1.0a16/: 404.html  index.html  sitemap.xml
v1.0a17/: 404.html  index.html  sitemap.xml
v1.0a18/: 404.html  index.html  sitemap.xml
v1.0a19/: 404.html  index.html  sitemap.xml
v1.0a20/: 404.html  index.html  sitemap.xml
v1.0a21/: 404.html  index.html  sitemap.xml
v1.0a22/: 404.html  index.html  objects.inv  sitemap.xml
v1.0a23/: 404.html  index.html  sitemap.xml
(+442 files in other folders)
